Change size block timer

--- a/css/clock.css
+++ b/css/clock.css
@@ -38,6 +38,7 @@ html {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    width: 15%;
 }
 .timer-time {
     border-radius: 10px;
